<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_EnOcean" Id="{bec68ff9-8f1d-4ce1-b8b9-84de691aacc9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//Atrium
	strEnOceanSwitch_AtriumNiveau_PladeB_Old		: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_AtriumNiveau_PladeB				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_AtriumNiveau_Service				: Tc2_EnOcean.STR_EnOceanSwitch;

//Gange
	strEnOceanSwitch_Gang_4_413_Pendler     			: Tc2_EnOcean.STR_EnOceanSwitch;

//Rum
	strEnOceanSwitch_Rum_3_429_Indgang					: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_3_429_Ekstra					: Tc2_EnOcean.STR_EnOceanSwitch;
	
	strEnOceanSwitch_Rum_4_407_Indgang1					: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_4_407_Indgang2					: Tc2_EnOcean.STR_EnOceanSwitch;
	
	strEnOceanSwitch_Rum_4_411_Indgang					: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_4_411_Ekstra					: Tc2_EnOcean.STR_EnOceanSwitch;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>