<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="P_EnOcean" Id="{d2583012-7b8d-42b3-930e-7213eee0e992}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_EnOcean
VAR
	fbKL6581			: FB_KL6581;
	stKL6581_in  AT %I* : KL6581_INPUT;
	stKL6581_out AT %Q*	: KL6581_OUTPUT;
	stKL6581			: STR_KL6581;
	bInitCom			: BOOL := TRUE;
	
	arrEnOcean_Search	: ARRAY [1..8] OF FB_EnOcean_Search;
	nSearchIdx			: BYTE;
	bSerach				: BOOL;
	arrDevices			: ARRAY [1..8] OF INT;
	arrID					: ARRAY [1..8, 0..255] OF DWORD;

	//Trykknapper Atrium
	fbAtriumNiveau_Tryk_PladeB_Old				: FB_Rec_RPS_Switch;
	fbAtriumNiveau_Tryk_PladeB						: FB_Rec_RPS_Switch;
	fbAtriumNiveau_Tryk_Sevice						: FB_Rec_RPS_Switch;

	//Trykknapper på gange
	fbGang_4_413_Tryk_Pendler    						: FB_Rec_RPS_Switch;	
	
	//Trykknapper i rum
	fbRum_3_429_Tryk_Indgang							: FB_Rec_RPS_Switch;
	fbRum_3_429_Tryk_Ekstra							: FB_Rec_RPS_Switch;
	
	fbRum_4_407_Tryk_Indgang1						: FB_Rec_RPS_Switch;
	fbRum_4_407_Tryk_Indgang2						: FB_Rec_RPS_Switch;
	
	fbRum_4_411_Tryk_Indgang							: FB_Rec_RPS_Switch;
	fbRum_4_411_Tryk_Ekstra							: FB_Rec_RPS_Switch;
	
	//fbRum_1_215_Tryk											: FB_Rec_RPS_Switch;
	
END_VAR

VAR CONSTANT
	byNode_1: BYTE := 1;
	byNode_2: BYTE := 2;
	byNode_3: BYTE := 3;
	byNode_4: BYTE := 4;
	byNode_5: BYTE := 5;
	byNode_6: BYTE := 6;
	byNode_7: BYTE := 7;
	byNode_8: BYTE := 8;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
(* Kommunikation mit der KL6581. *)
(* Communication with the KL6581. *)
fbKL6581(
	bInit			:= bInitCom,
	nIdx			:= 2,
	stKL6581_in		:= stKL6581_In,
	stKL6581_out	:= stKL6581_Out,
	bReady			=> ,
	bBusy			=> ,
	bError			=> ,
	iErrorID		=> ,
	str_KL6581		=> stKL6581);
	
GVL_AHDataModbus.EnOceanError	:= TO_UINT(fbKL6581.iErrorID);

(* Warten bis der Kommunikationsbaustein initialisiert wurde.*)
(* Wait until the communication function block has been initialized. *)
IF (NOT fbKL6581.bReady) THEN
	RETURN;
END_IF

FOR nSearchIdx:= 1 TO 8 DO
	arrEnOcean_Search[nSearchIdx](
		bStart:= TRUE, 
		str_KL6581:= stKL6581 , 
		byNode:= nSearchIdx, 
		bReceive=> , 
		iDevices=>arrDevices[nSearchIdx] , 
		ar_ID=> );
		
		MEMCPY(ADR(arrID[nSearchIdx,0]), ADR(arrEnOcean_Search[nSearchIdx].ar_ID), SIZEOF(arrEnOcean_Search[nSearchIdx].ar_ID)); 
END_FOR

//Atrium
A_AtriumNiveau();

//Gange
A_Gang_4_413();

//Rum
A_Rum_3_429();
A_Rum_4_407();
A_Rum_4_411();]]></ST>
    </Implementation>
    <Action Name="A_AtriumNiveau" Id="{5b863a8e-6cff-4511-86bf-f0a83cf94e37}">
      <Implementation>
        <ST><![CDATA[fbAtriumNiveau_Tryk_PladeB_Old(
	str_KL6581:=stKL6581 , 
	byNode:=0, 
	dw_ID:= 16#0029EE85, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_AtriumNiveau_PladeB_Old,
	by_Node=> , 
	bReceive=> );
	
	fbAtriumNiveau_Tryk_PladeB(
	str_KL6581:=stKL6581 , 
	byNode:=0, 
	dw_ID:= 16#0029B92D, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_AtriumNiveau_PladeB,
	by_Node=> , 
	bReceive=> );
	
(*
fbAtriumNiveau_Tryk_Sevice(
	str_KL6581:=stKL6581 , 
	byNode:=0, 
	dw_ID:= 16#00FEE4FE87, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_AtriumNiveau_Service, 
	by_Node=> , 
	bReceive=> );
*)]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Gang_4_413" Id="{b60dfd7a-c1ff-403b-af61-1104eff0042d}">
      <Implementation>
        <ST><![CDATA[fbGang_4_413_Tryk_Pendler(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2, 
	dw_ID:= 16#0029AAC6, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Gang_4_413_Pendler, 
	by_Node=> , 
	bReceive=> );
	]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_3_429" Id="{47259cc6-b2a9-41d5-b4d0-7d161cf5cc8b}">
      <Implementation>
        <ST><![CDATA[fbRum_3_429_Tryk_Indgang(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2, 
	dw_ID:= 16#0029AD76, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_3_429_Indgang, 
	by_Node=> , 
	bReceive=> );
	
	fbRum_3_429_Tryk_Ekstra(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2, 
	dw_ID:= 16#0029ABAC, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_3_429_Ekstra, 
	by_Node=> , 
	bReceive=> );
	]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_4_407" Id="{3145f94f-6056-43a7-b3b7-c4deed36fd74}">
      <Implementation>
        <ST><![CDATA[fbRum_4_407_Tryk_Indgang1(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2, 
	dw_ID:= 16#0, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_4_407_Indgang1, 
	by_Node=> , 
	bReceive=> );
	
	fbRum_4_407_Tryk_Indgang2(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2, 
	dw_ID:= 16#0, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_4_407_Indgang2, 
	by_Node=> , 
	bReceive=> );
	]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Rum_4_411" Id="{fa72e29b-8c74-4454-9bf1-ce0fb78254a9}">
      <Implementation>
        <ST><![CDATA[fbRum_4_411_Tryk_Indgang(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2, 
	dw_ID:= 16#0029ABB2, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_4_411_Indgang, 
	by_Node=> , 
	bReceive=> );
	
	fbRum_4_411_Tryk_Ekstra(
	str_KL6581:=stKL6581 , 
	byNode:=byNode_2, 
	dw_ID:= 16#0029AADD, 
	str_EnOceanSwitch=> GVL_EnOcean.strEnOceanSwitch_Rum_4_411_Ekstra, 
	by_Node=> , 
	bReceive=> );
	]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>